# hi

./: .gitignore  CHANGELOG.md  hw3.cabal
app/: Main.hs
src/HW3/: Action.hs  Base.hs  Evaluator.hs  Parser.hs  Pretty.hs  Test.hs
src/HW3/Test/: TestUtils.hs
src/HW3/Test/T1/: TestT1.hs
src/HW3/Test/T2/: TestT2.hs
src/HW3/Test/T3/: TestT3.hs
src/HW3/Test/T4/: TestT4.hs
src/HW3/Test/T5/: TestT5.hs
src/HW3/Test/T6/: TestT6.hs
src/HW3/Test/T7/: TestT7.hs
src/HW3/Test/T8/: TestT8.hs
