cabal-version:      2.4
name:               hw3
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Ilona Bozhe
maintainer:         warmte00@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable hw3
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    transformers, haskeline, megaparsec, containers, hw3, tasty-hspec, tasty, hspec, base >= 4.12.0.0
    hs-source-dirs:   app
    default-language: Haskell2010

library
    exposed-modules: HW3.Base, HW3.Evaluator, HW3.Parser, HW3.Pretty, HW3.Action
    hs-source-dirs:  src
    build-depends:   time, random, directory, serialise, zlib, bytestring, containers, haskeline, text, tasty-hspec, tasty, hspec, megaparsec, transformers, scientific, prettyprinter, prettyprinter-ansi-terminal, parser-combinators, base >= 4.12.0.0